<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskFormActivity">

    <EditText
        android:id="@+id/EditTextShort"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ShortDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/EditTextLong"
        android:layout_width="280dp"
        android:layout_height="139dp"
        android:layout_marginTop="32dp"
        android:inputType="textMultiLine"
        android:text="@string/LongDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextShort" />

    <Switch
        android:id="@+id/SwitchDone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextLong" />

    <SeekBar
        android:id="@+id/SeekBarPercentage"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_marginTop="48dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="@+id/SwitchDone"
        app:layout_constraintTop_toBottomOf="@+id/SwitchDone" />

    <TextView
        android:id="@+id/TextViewLabelPercentage"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Percentage"
        app:layout_constraintStart_toStartOf="@+id/SwitchDone"
        app:layout_constraintTop_toBottomOf="@+id/SwitchDone" />

    <TextView
        android:id="@+id/TextViewPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/intPercentage"
        app:layout_constraintEnd_toEndOf="@+id/SeekBarPercentage"
        app:layout_constraintTop_toBottomOf="@+id/SeekBarPercentage" />

    <Button
        android:id="@+id/ButtonSave"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="76dp"
        android:onClick="taskTaskCreateTask"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:onClick="BackToMainActivity"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ButtonSave"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>